--- a/.gitignore
+++ b/.gitignore
@@ -71,4 +71,9 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+# coherence.io
+/[Aa]ssets/coherence/RuntimeSettings.asset
+
+# else
 /.vscode
