--- a/Assets/Scripts/GGJGame.asmdef
+++ b/Assets/Scripts/GGJGame.asmdef
@@ -3,6 +3,7 @@
     "rootNamespace": "",
     "references": [
         "GUID:fd4abe4ffe74ef1448afe15c6cb36bb7",
+        "GUID:47450684110bc7845a39db4ddb54c84d",
         "GUID:6fca9c0eaa6a14b189136e4611780b56",
         "GUID:fe685ec1767f73d42b749ea8045bfe43",
         "GUID:75469ad4d38634e559750d17036d5f7c",
